# griptape-aws

./: README.md  pyproject.toml
examples/tools/: aws_iam_tool.py  aws_s3_tool.py
griptape/aws/tools/: __init__.py  base_aws_tool.py
griptape/aws/tools/aws_cli/: tool.py
griptape/aws/tools/aws_iam/: tool.py
griptape/aws/tools/aws_pricing/: tool.py
griptape/aws/tools/aws_s3/: tool.py
tests/unit/tools/: test_aws_iam_tool.py  test_aws_pricing_tool.py  test_aws_s3_tool.py  test_reverse_string_tool.py
