[tool.poetry]
name = "griptape_plugin_template"
version = "0.1.0"
description = "A Griptape plugin."
authors = ["Author Name <contact@example.com>"]
readme = "README.md"
packages = [
    {include = "griptape"}
]

[tool.poetry.dependencies]
python = "^3.9"
griptape = "^0.34.0"
boto3 = "^1.35.51"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-mock = "^3.1.4"
moto = "^5.0.21"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pyright = "^1.1.376"
pre-commit = "^4.0.0"
typos = "^1.22.9"
boto3-stubs = {extras = ["bedrock", "iam", "opensearch", "s3", "sagemaker", "sqs", "iot-data", "dynamodb", "redshift-data", "pricing"], version = "^1.34.105"}

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["griptape"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



